tests/NormalTests/paczka1/fuzzy1/13262447.err
Error in line 3: Ndb7yZ A608 18,6
Error in line 11: S442 A608 38,9
Error in line 21: S442 S301 26,1
Error in line 8: Ndb7yZ S442 30,7
Error in line 27: Ndb7yZ S301 70,2
Error in line 10: V5EcrcjQZXD S376 24,6
Error in line 38: EBNMylc1Xo A608 87,6
